gmt (5.4.1+dfsg-2) UNRELEASED; urgency=medium

  * Add patch by John Paul Adrian Glaubitz for m68k support.
    (closes: #865726)
  * Bump Standards-Version to 4.0.0, no changes.
  * Add autopkgtest to test installability.

 -- Bas Couwenberg <sebastic@debian.org>  Sat, 24 Jun 2017 11:15:52 +0200

gmt (5.4.1+dfsg-1) unstable; urgency=medium

  * Move from experimental to unstable.

 -- Bas Couwenberg <sebastic@debian.org>  Sun, 18 Jun 2017 10:44:23 +0200

gmt (5.4.1+dfsg-1~exp1) experimental; urgency=medium

  * New upstream release.

 -- Bas Couwenberg <sebastic@debian.org>  Wed, 10 May 2017 07:34:20 +0200

gmt (5.4.0+dfsg-1~exp1) experimental; urgency=medium

  * New upstream release.
  * Add libcurl4-gnutls-dev | libcurl-ssl-dev to build dependencies.
  * Refresh patches.
  * Update symbols for 5.4.0.
  * Drop gmt_url.c from copyright file, removed upstream.

 -- Bas Couwenberg <sebastic@debian.org>  Tue, 09 May 2017 07:53:39 +0200

gmt (5.3.3+dfsg-1~exp1) experimental; urgency=medium

  * New upstream release.

 -- Bas Couwenberg <sebastic@debian.org>  Thu, 23 Mar 2017 22:53:33 +0100

gmt (5.3.2+dfsg-1~exp2) experimental; urgency=medium

  * Move supplements plugin from libgmt-dev to gmt package.
    See: http://gmt.soest.hawaii.edu/issues/972#note-8

 -- Bas Couwenberg <sebastic@debian.org>  Mon, 20 Mar 2017 21:21:22 +0100

gmt (5.3.2+dfsg-1~exp1) experimental; urgency=medium

  * New upstream release.
  * Update copyright years for copyright holders.
  * Drop spelling-errors.patch, applied upstream.
  * Update symbols for 5.3.2.

 -- Bas Couwenberg <sebastic@debian.org>  Sun, 26 Feb 2017 12:11:15 +0100

gmt (5.3.1+dfsg-2) unstable; urgency=medium

  * Use dh_auto_{clean,build,install} instead of custom commands.
  * Drop disable-examples.patch, no longer causes FTBFS.

 -- Bas Couwenberg <sebastic@debian.org>  Sat, 05 Nov 2016 13:27:49 +0100

gmt (5.3.1+dfsg-1) unstable; urgency=medium

  * New upstream release.