@@ -4,6 +4,7 @@ gmt (5.4.1+dfsg-2) UNRELEASED; urgency=medium
     (closes: #865726)
   * Bump Standards-Version to 4.0.0, no changes.
   * Add autopkgtest to test installability.
+  * Use pkg-info.mk variables instead of dpkg-parsechangelog output.
 
  -- Bas Couwenberg <sebastic@debian.org>  Sat, 24 Jun 2017 11:15:52 +0200
 
